# MLOps_Predictive-Maintenance-NASA-C-MAPSS

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  data.dvc  docker-compose.yaml  mlflow.db  model.pkl  model_info.yaml  nginx.conf  predict.json  predict_drift.json  prometheus.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: main.yml  mlops-automation.yaml  mlops-automation.yml
MLOps_Predictive-Maintenance-NASA-C-MAPSS/MLOps_Predictive-Maintenance-NASA-C-MAPSS/: Dockerfile  README.md  api.py  docker-compose.yaml  metrics.json.dvc  model.pkl.dvc  requirements.txt
MLOps_Predictive-Maintenance-NASA-C-MAPSS/MLOps_Predictive-Maintenance-NASA-C-MAPSS/.devcontainer/: devcontainer.json
api/: Dockerfile  app.py
data/: external.dvc  processed.dvc  processed_log.txt  raw.dvc
data/processed/: cleaned_data.csv.dvc
data/raw/: .gitignore  data_20260523_055052.csv.dvc  data_20260523_055054.csv.dvc  data_20260523_055056.csv.dvc  data_20260523_055058.csv.dvc  data_20260523_055100.csv.dvc
docs/: mkdocs.yml
mlflow_data/: mlflow.db
mlops_predictive_maintanance_nasa_c_mapss/: __init__.py  dataset.py  plots.py
mlops_predictive_maintanance_nasa_c_mapss/modeling/: predict.py
mlruns/.trash/911702485419549654/: meta.yaml
mlruns/0/: meta.yaml
mlruns/856740779135952251/: meta.yaml
models/: model.pkl
src/: evaluate.py  inference.py  ingest_data.py  mlflow_minio.py  preprocess.py  register_model.py  train.py
tests/: test_data.py  test_model.py  test_pipeline.py  test_preprocessing.py
(+161 files in other folders)
