[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_predictive_maintanance_nasa_c_mapss"
version = "0.0.1"
description = "Predictive maintanance untuk mesin industri berbasis continual learning menggunakan NASA C-MAPSS"
authors = [
  { name = "Kaneysha" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["mlops_predictive_maintanance_nasa_c_mapss"]
include = ["pyproject.toml", "mlops_predictive_maintanance_nasa_c_mapss/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_predictive_maintanance_nasa_c_mapss"]
force-sort-within-sections = true

